# PlugOVR

./: .gitignore  Cargo.toml  README.md  THIRDPARTY.yml  build_vst3.bat  compile_voices.py  requirements.txt
cpp_src/: deque.hpp  liboddvoices.cpp  liboddvoices.hpp  pitch.cpp  pitch.hpp  sine_table_256.inc
python/: corpus.py  phonology.py
src/: deque.rs  editor.rs  g2p.rs  grain.rs  lib.rs  main.rs  mpron.rs  phonetics.rs  pitch.rs  plugin.rs  sine_table.csv  synth.rs  voice.rs
testfiles/: lyrics.txt  test.mid
