[package]
name = "plugovr"
version = "0.3.0"
edition = "2021"
description = "OddVoices singing synthesizer - VST3/CLAP plugin"
authors = ["EuphoricPenguin"]

[dependencies]
# Audio plugin framework (not on crates.io, use git)
nih-plug = { git = "https://github.com/EuphoricPenguin/nih-plug-vst3", package = "nih_plug", branch = "master" }
nih-plug-egui = { git = "https://github.com/EuphoricPenguin/nih-plug-vst3", package = "nih_plug_egui", branch = "master" }

# Audio file loading (for voice files)
hound = "3.5.1"

# Text encoding (for mpron.txt)
encoding_rs = "0.8.35"

# Random number generation (for pitch jitter/drift)
rand = "0.10.1"

# Clipboard access (for copy/paste buttons)
arboard = "3"

[dev-dependencies]
tempfile = "3"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true
